--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -516,7 +516,8 @@
         flex-direction: column;
         align-items: center;
         gap: calc($index * 1.5);
-
+        position: absolute;
+        // opacity: 0;
         max-width: 1072px;
 
         h2 {
@@ -634,8 +635,10 @@
             backdrop-filter: blur(2.5px);
             background-color: rgba(113, 99, 77, 0.35);
             z-index: -1;
+            transition: backdrop-filter .5s ease-in-out;
 
             &--full-blur {
+                // transition: 1 all;
                 backdrop-filter: blur(18px);
             }
         }
@@ -643,6 +646,14 @@
         img {
             height: 100%;
         }
+    }
+
+    &__rama-item {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-45%, -45%);
+        width: 23%;
     }
 
     &__buttons {
@@ -663,6 +674,13 @@
         background-color: #3E304E;
         text-transform: none;
         box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.20);
+
+        &--active {
+            border-radius: 20px;
+            background: linear-gradient(90deg, #3926AD 0%, #C367D6 100%) !important;
+            /* нажатая кнопка */
+            box-shadow: 0px 3px 7px 4px rgba(23, 4, 47, 0.25), 0px -3px 4px 0px rgba(239, 175, 255, 0.19);
+        }
 
         p {
             color: #fff;
@@ -788,7 +806,7 @@
         width: 100%;
         height: 100%;
         z-index: 0;
-        transition: 1s;
+        // transition: 1s;
 
         // &--animate {
         //     top: -300px;
@@ -823,6 +841,51 @@
         }
     }
 }
+
+
+.dop-screen2 {
+    &__content-wrapper {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    &__part {
+        width: calc(50% - 70px);
+        max-width: 100%;
+    }
+
+    &__tabs {
+        margin-top: 14px;
+    }
+
+    &__tab-contents {
+        margin-top: 50px;
+    }
+
+    &__tab-content {
+        color: rgba(29, 12, 51, 0.80);
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 192.4%;
+    }
+
+    &__buttons {
+        margin-top: 50px;
+    }
+
+    &__right-part {
+        border-radius: 30px;
+        /* Большая тень */
+        box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.20);
+        overflow: hidden;
+    }
+    &__img {
+        width: 100%;
+    }
+}
+
 
 // ШЕСТОЙ ЭКРАН
 
@@ -1278,6 +1341,58 @@
             height: calc(100vh - 36px);
         }
     }
+}
+
+.dop-screen {
+    &__content-wrapper {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        height: 100%;
+    }
+
+    &__item {
+        padding: 40px 3px 0 35px;
+        position: relative;
+        max-width: 100%;
+        width: calc(50% - 15px);
+        border-radius: 30px;
+        background: #FDFDFD;
+        box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.20);
+        overflow: hidden;
+
+        // &:nth-child(3),
+        // &:nth-child(4) {
+        //     display: none;
+        // }
+    }
+
+    &__title {
+        background: $purple-to-pink;
+        background-clip: text;
+        font-size: 40px;
+        font-style: normal;
+        font-weight: bold;
+        -webkit-text-fill-color: transparent;
+    }
+
+    &__desc {
+        margin-top: 20px;
+        color: var(--base-text, rgba(29, 12, 51, 0.80));
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 167.9%;
+    }
+
+    &__image {
+        width: 100%;
+        position: absolute;
+        bottom: -60px;
+        left: 0;
+
+    }
+
 }
 
 .contact-form {
