--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -1,27 +1,27 @@
 .header {
 	width: 100%;
 	position: fixed;
-	z-index: 10;
-	//top: 30px;
-	//padding: 0 100px;
+	z-index: 1;
+	top: 30px;
+	padding: 0 100px;
 	transition: 0.3s all;
 	// max-width: 1925px;
-	//left: 50%;
-	//transform: translateX(-50%);
+	left: 50%;
+	transform: translateX(-50%);
 
 	&__desc {
 		width: 100%;
 		transition: 0.3s all;
 		background-color: #fff;
-		//border-radius: 25px;
-		box-shadow: 0px 0px 18px 0px rgba(35, 39, 121, 0.10);
+		border-radius: 25px;
+		box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.2);
 	}
 
 	&__wrapper {
 		display: flex;
 		flex-direction: row;
 		padding: 11px 15px 11px 45px;
-		//justify-content: space-between;
+		justify-content: space-between;
 		gap: 40px;
 		align-items: center;
 	}
@@ -40,51 +40,21 @@
 		display: block;
 	}
 
-	//&__submenu {
-	//	display: flex;
-	//	flex-direction: row;
-	//	justify-content: flex-end;
-	//	gap: 2%;
-	//	padding: 13px 15px;
-	//	border-top: 1px #f0f0f0 solid;
-	//
-	//	a {
-	//		padding: 5px 11px;
-	//		transition: .3s;
-	//		background: transparent;
-	//		font-weight: 300;
-	//		border-radius: 15px;
-	//
-	//	}
-	//
-	//	a.active {
-	//		border-radius: 15px;
-	//		background: linear-gradient(57deg, #1D0C33 0%, #D283EA 100%);
-	//		padding: 5px 11px;
-	//		font-weight: 300;
-	//		color: #f0f0f0;
-	//		box-shadow: 0px 5px 7px 0px rgba(23, 4, 47, 0.25), 0px -3px 4px 0px rgba(239, 175, 255, 0.19);
-	//	}
-	//
-	//	li {
-	//		font-size: 13px;
-	//	}
-	//}
-	&__menu {
+	&__submenu {
 		display: flex;
 		flex-direction: row;
-		//justify-content: flex-end;
-		//gap: 2%;
-		gap: 10px;
+		justify-content: flex-end;
+		gap: 2%;
 		padding: 13px 15px;
-		align-items: center;
-
+		border-top: 1px #f0f0f0 solid;
+		
 		a {
 			padding: 5px 11px;
 			transition: .3s;
 			background: transparent;
 			font-weight: 300;
 			border-radius: 15px;
+
 		}
 
 		a.active {
@@ -92,9 +62,8 @@
 			background: linear-gradient(57deg, #1D0C33 0%, #D283EA 100%);
 			padding: 5px 11px;
 			font-weight: 300;
-		}
-		a.active li {
 			color: #f0f0f0;
+			//box-shadow: 0px 5px 7px 0px rgba(23, 4, 47, 0.25), 0px -3px 4px 0px rgba(239, 175, 255, 0.19);
 		}
 
 		li {
@@ -133,8 +102,8 @@
 			&--mob-top {
 				background-color: white;
 				border-radius: 10px;
-				//box-shadow: 0px 0px 3.64583px 0px rgba(0, 0, 0, 0.2);
-				padding: 5px 7px 5px 15px;
+				box-shadow: 0px 0px 3.64583px 0px rgba(0, 0, 0, 0.2);
+				padding: 5px 7px;
 			}
 
 			&--mob-menu {
@@ -179,17 +148,16 @@
 @media (max-width: 1750px) {
 	.header {
 		&__wrapper {
-			//gap: 40px;
-			gap: 10px;
+			gap: 20px;
 		}
 
-		//&__nav {
-		//	max-width: 1027px;
-		//}
+		&__nav {
+			max-width: 1027px;
+		}
 
-		//&__menu {
-		//	gap: 20px;
-		//}
+		&__menu {
+			gap: 20px;
+		}
 	}
 
 	.header-contacts {
@@ -199,13 +167,6 @@
 			gap: 15px;
 			max-width: 285px;
 		}
-	}
-}
-
-@media (max-width: 1296px) {
-
-	.header__menu button {
-		display: none;
 	}
 }
 
@@ -222,8 +183,8 @@
 
 @media (max-width: 1000px) {
 	.header {
-		//padding: 20px 20px 0;
-		//background-color: unset;
+		padding: 0 20px;
+		background-color: unset;
 		border-radius: unset;
 		box-shadow: unset;
 		display: flex;
@@ -238,6 +199,6 @@
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
-		//background-color: unset;
+		background-color: unset;
 	}
 }
