--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -63,6 +63,7 @@
 			padding: 5px 20px;
 			font-weight: 300;
 			color: #f0f0f0;
+			transition: all 0.5s ease;
 			//box-shadow: 0px 5px 7px 0px rgba(23, 4, 47, 0.25), 0px -3px 4px 0px rgba(239, 175, 255, 0.19);
 		}
 
